# plaitpy

./: plaitpy-diabetes.ipynb  pyproject.toml
diabetes/: diabetes-template.yaml  generated.csv
docs/: EXAMPLES.md  FORMAT.md
plaitpy/: cli.py  template.py
