[tool.poetry]
name = "plaitpy"
version = "0.1.0"
description = ""
authors = ["Hayssam  <massyah@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
matplotlib = "^3.7.1"
pandas = "^1.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
plait = 'plaitpy.cli:main'
